[package]
name = "distributed-redis-rust"
version = "0.1.0"
authors = ["xuorig <mgiroux0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
crc = "1.8.1"
log = "0.4.14"
pretty_env_logger = "0.4.0"
warp = "0.3"
redis = { version = "0.20.0", features = ["tokio-comp"] }
bytes = "1.0.1"
